--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
+# Custom 
+
+**/_gitignored/
+**/.gitignored/
+
+# ------------------------
+
 # General
 .DS_Store
 .AppleDouble
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
